--- a/src/main/webapp/app/details/bio.html
+++ b/src/main/webapp/app/details/bio.html
@@ -1,18 +1,18 @@
 <p>{{fish.caracteristicasAnimal}}</p>
 <table class="table">
     <thead>
-    <th>Metric</th>
-    <th>Minimum</th>
-    <th>Maximum</th>
+    <th>Métrica</th>
+    <th>Mínimo</th>
+    <th>Máximo</th>
 </thead>
 <tbody>
     <tr>
-        <td>Length</td>
+        <td>Longitud pez</td>
         <td>{{fish.longitudMinimaAnimal}}</td>
         <td>{{fish.longitudMaximaAnimal}}</td>
     </tr>
     <tr>
-        <td>Weight</td>
+        <td>Peso pez</td>
         <td>{{fish.pesoMinimoAnimal}}</td>
         <td>{{fish.pesoMaximoAnimal}}</td>
     </tr>
