--- a/src/main/webapp/app/details/bio.html
+++ b/src/main/webapp/app/details/bio.html
@@ -8,13 +8,13 @@
 <tbody>
     <tr>
         <td>Longitud pez</td>
-        <td>{{fish.longitudMinimaAnimal}}</td>
-        <td>{{fish.longitudMaximaAnimal}}</td>
+        <td>{{fish.longitudMinimaAnimal}}cm</td>
+        <td>{{fish.longitudMaximaAnimal}}cm</td>
     </tr>
     <tr>
         <td>Peso pez</td>
-        <td>{{fish.pesoMinimoAnimal}}</td>
-        <td>{{fish.pesoMaximoAnimal}}</td>
+        <td>{{fish.pesoMinimoAnimal}}kg</td>
+        <td>{{fish.pesoMaximoAnimal}}kg</td>
     </tr>
 </tbody>
 </table>
